<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TypeActivity">

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/type"
        android:textSize="30sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonShortSkirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortskirt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <Button
        android:id="@+id/buttonLongSkirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/longSkirt"
        app:layout_constraintEnd_toEndOf="@+id/buttonShortSkirt"
        app:layout_constraintStart_toStartOf="@+id/buttonShortSkirt"
        app:layout_constraintTop_toBottomOf="@+id/buttonShortSkirt" />

</androidx.constraintlayout.widget.ConstraintLayout>